--- a/index.html
+++ b/index.html
@@ -4,8 +4,6 @@
 <title>JE Cooking Mama Count-up</title>
 </head>
 <body style="background-color: #d9d9d9;">
-<div style="height: 770px; width: 1520px; position: absolute; left: 230px; top: 130px; background-color: #ccc; "></div>
-<div style="position:static auto"><iframe src="https://www.tickcounter.com/widget/countup/327698" style="top:10%; left:10%; width:80%; height:80%; position:absolute; border:0; overflow:hidden" title="Days waited for James Early to play Cooking Mama"></iframe></div>
-<b style="position: absolute; left: 885px; top: 915px; font-family: 'Comic Sans MS'; font-size: 22px; color:#ccc">Please James...</b>
+<div style="position:static auto"><iframe src="https://www.tickcounter.com/widget/countup/327698" style="top:0px; left:0px; width:100%; height:100%; position:absolute; border:0; overflow:hidden" title="Days waited for James Early to play Cooking Mama"></iframe></div>
 </body>
 </html>
